# python-ai-coding-standards

./: AI.md  CLAUDE.md  README.md  check_paths.py  pyproject.toml  test_import.py
src/python_ai_coding_standards/: AI_ASSISTANT_GUIDE.md  __init__.py  ai.py  cli.py
src/python_ai_coding_standards/core/: __init__.py  api.py
src/python_ai_coding_standards/standards/: __init__.py  data.py
tests/: test_ai.py  test_api.py  test_integration.py
