[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-ai-coding-standards"
version = "0.1.0"
description = "Python coding standards for AI assistants"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["python", "coding", "standards", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.256",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/python-ai-coding-standards"
"Bug Tracker" = "https://github.com/yourusername/python-ai-coding-standards/issues"

[project.scripts]
pystandards = "python_ai_coding_standards.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/python_ai_coding_standards"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.256",
    "mypy>=1.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=python_ai_coding_standards {args:tests}"
lint = "ruff check src tests"
format = "ruff format src tests"
type = "mypy --strict src"
all = ["lint", "test"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "N", "UP", "ANN", "ERA", "RUF"]
ignore = ["ANN101"]  # Missing type annotation for `self`

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"